2008-03-14 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimcClientSfcbLocal.c, providerMgr.c:
	Fixed 1914551: sfcb file descriptor leaks
	(patch by J. Vinodhini)

2008-02-25 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	Altered another change from 1893300

2008-02-21 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	Altered last change for 1893300 to solve double free problem

2008-02-19 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* internalProvider.c:
	Fixed 1892621: Memory leak in associator and associatorNames
	(patch by Tim Potter)
	Fixed 1893300: More memory leaks in associators and associatorNames
	(patch by Tim Potter)

	* providerDrv.c:
	Fixed 1896551: Memory leak on loadProvider() failure
	(patch by Tim Potter)
	
2008-02-15 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* classProvider.c, classSchema2c.c, internalProvider.c, 
	interopServerProvider.c:
	Fixed 1891702: Fix various resource leaks (patch by Tim Potter)

2008-02-14 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* getSchema.sh.pre.in:
	Fixed 1894061: Allow sfcb to use updated versions of the CIM Schema

2008-02-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cmpimacs.h:
	Fixed 1888889: Typo in sfcb's cmpimacs.h for CMSetObjectPath macro
	(bug found by Charles Bullis)

2008-01-31 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* objectpath.c:
	Fixed 1883796: unused variables in objectpath.c

	* cimXmlGen.c:
	Fixed 1883826: getKeyValueTypePtr() always returns false for boolean 
	values
	
2008-01-30 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlRequest.c:
	Fixed 1879334: Memory leaks in cimXmlRequest.c (patch by Tim Potter)

	* brokerUpc:
	Fixed 1879454: Memory leaks in brokerUpc.c (patch by Tim Potter)

	* sfcbdump.c:
	Fixed 1883049: Memory leak in sfcbdump (patch by Tim Potter)
	
2008-01-29 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* cimXmlGen.c, cimcClientSfcbLocal.c, classProvider.c, 